--- a/Developer Portfolio Starter Files/Assets/style.css
+++ b/Developer Portfolio Starter Files/Assets/style.css
@@ -4,7 +4,7 @@
 @import url('https://fonts.googleapis.com/css2?family=Prata&display=swap'); 
 
 *{
-    margin: 0 40px;
+    margin: 0 30px;
     padding: 0;
     box-sizing: border-box;
     background-color: #0A0A0B;
@@ -22,6 +22,7 @@ nav{
     position: absolute;
     top: 4rem;
     font-size: 17px;
+    font-weight: 600;
 }
 
 .navLinks div{
