--- a/Developer Portfolio Starter Files/Assets/style.css
+++ b/Developer Portfolio Starter Files/Assets/style.css
@@ -13,7 +13,7 @@
 nav{
     font-family: 'Inter', sans-serif;
     background-color: #0A0A0B;
-    height: 5rem;
+    height: 25vh;
 }
 .navName{
     font-family: 'Prata', serif;
@@ -28,6 +28,7 @@ nav{
 .navLinks div{
     display: inline-block;
     margin: 0 20px;
+    cursor: pointer;
 }
 
 .navLinks{
@@ -37,6 +38,7 @@ nav{
     top: 4rem;
     left: 24rem;
     font-size: 19px;
+    cursor: default;
 }
 
 .navBtn{
@@ -55,4 +57,32 @@ nav{
     font-weight: 500;
     font-size: large;
     cursor: pointer;
+}
+
+.mainContent{
+    color: white;
+}
+
+.mainHeading{
+    margin: 0 0;
+}
+
+.mainHeading h1{
+    font-size: 55px;
+    font-weight: 100;
+    font-family: 'Prata', serif;
+}
+
+.mainHeading h1:nth-of-type(2){
+    margin-bottom: 10px;
+}
+
+.mainHeading p:nth-of-type(2),p:nth-of-type(3){
+    margin-top: 10px;
+}
+
+.mainHeading p{
+    font-size: 18px;
+    font-family: 'Inter', sans-serif;   
+    color: #ADADAD;
 }
