changes width of more content

--- a/Developer Portfolio Starter Files/Assets/style.css
+++ b/Developer Portfolio Starter Files/Assets/style.css
@@ -147,6 +147,7 @@ nav{
     padding: 10px;
     background-color: var(--secBackground);
     display: inline-block;
+    width: 85vw;
 }
 
 .mcMargin{
